# learn_taipy

./: README.md  hello_world.py  hello_world_gui.py  pyproject.toml
.data/: version.json
.data/data_nodes/: DATANODE_input_name_569110f2-52be-4578-a05c-2be547d1be61.json  DATANODE_input_name_7fc8d21c-85b2-44a4-82d0-434ad05bbadb.json  DATANODE_message_04ed5143-66b7-4a34-8700-bf4f53d7bf96.json  DATANODE_message_bb7620e2-9221-41ee-9e0d-82795fd5d9b8.json
.data/jobs/: JOB_build_msg_751a8238-1cc8-4d41-b0bb-467118a31f7b.json
.data/pickles/: DATANODE_input_name_7fc8d21c-85b2-44a4-82d0-434ad05bbadb.p  DATANODE_message_bb7620e2-9221-41ee-9e0d-82795fd5d9b8.p
.data/scenarios/: SCENARIO_scenario_0d71ece7-fc56-49eb-8972-ce1e8aba3da6.json  SCENARIO_scenario_831ae704-a151-4049-93c1-9d16a49a4a8a.json
.data/tasks/: TASK_build_msg_1e836b7b-97bc-4998-8f35-4179ccad89dc.json  TASK_build_msg_b9836b64-e88f-4081-8f14-ce0e46d5332e.json
.data/version/: df432333-bb82-4f5b-a9a9-47dc36652651.json
